feat: add moderation report analytics for daily report